# HayoTrans

./: Cargo.toml  LICENSE  README.md  README_IMPLEMENTATION.md  package.json  pnpm-lock.yaml
plans/: hayotrans-architecture.md  parser-architecture.md  rpg-maker-implementation.md
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/archiver/: mod.rs
src-tauri/src/archiver/rgss/: key.rs  mod.rs  reader.rs  version.rs  writer.rs
src-tauri/src/commands/: config.rs  mod.rs  project.rs  retriever.rs
src-tauri/src/parser/: mod.rs
src-tauri/src/parser/rpg_maker_mv_mz/: command.rs  common_events.rs  event_page.rs  map.rs  mod.rs
src-tauri/src/parser/rpg_maker_mv_mz/handlers/: choices.rs  comment.rs  dialogue.rs  mod.rs  plugin.rs
src-tauri/src/parser/types/: context.rs  event_code.rs  mod.rs  options.rs  translation_path.rs  translation_unit.rs
src-tauri/src/retriever/: detector.rs  kirikiri.rs  mod.rs  rpg_maker.rs  v8_engine.rs
src-tauri/src/storage/: config.rs  database.rs  mod.rs  project_store.rs
src-tauri/src/types/: dialogue.rs  engine.rs  error.rs  mod.rs  progress.rs  project.rs  translation.rs
src/api/: config.ts  projects.ts
src/components/: ProjectCard.css  ProjectCard.tsx  SplashScreen.css  SplashScreen.tsx
src/i18n/: index.tsx
src/i18n/locales/: en.json  ko.json
src/pages/: ProjectListPage.css  ProjectListPage.tsx  ProjectWorkspacePage.css  ProjectWorkspacePage.tsx
src/styles/: global.css
src/types/: project.ts
